initial steps: get needed bst,pdf files

--- a/doc/msander.lyx
+++ b/doc/msander.lyx
@@ -61954,7 +61954,7 @@ status open
 \begin_layout Plain Layout
 \align center
 \begin_inset Graphics
-	filename nmrinfo.eps
+	filename nmrinfo.pdf
 	width 100text%
 
 \end_inset
@@ -62057,7 +62057,7 @@ status open
 \begin_layout Plain Layout
 \align center
 \begin_inset Graphics
-	filename nmrinfo2.eps
+	filename nmrinfo2.pdf
 	width 100text%
 
 \end_inset
