fix up xray reference

--- a/doc/amber.bib
+++ b/doc/amber.bib
@@ -10054,7 +10054,7 @@ year = {2021}
 @article{Mikhailovskii22,
 author = {Mikhailovskii, Oleg and Xue, Yi and Skrynnikov, Nikolai R.},
 title = {{Modeling a unit cell: crystallographic refinement procedure using
-the biomolecular MD simulation platform {\emph Amber}}},
+the biomolecular MD simulation platform \emph{Amber}}},
 journal = {IUCrJ},
 year = {2022},
 volume = {9},
