--- a/doc/msander.lyx
+++ b/doc/msander.lyx
@@ -608,6 +608,74 @@ ab initio
 \end_layout
 
 \begin_layout Section
+Main changes from the 
+\emph on
+sander
+\emph default
+ code in AmberTools
+\end_layout
+
+\begin_layout Enumerate
+Some pieces are missing from the sander program in AmberTools:
+\end_layout
+
+\begin_deeper
+\begin_layout Enumerate
+Things that should be easy to re-introduce later: emil, sebomd, pbsa, APBS,
+ the charge-relocation option.
+\end_layout
+
+\begin_layout Enumerate
+Things are are problably gone for good, but which don't represent the best
+ current practice: Path-integral methods, thermostats that don't follow
+ the "middle" scheme, Berendsen barostat
+\end_layout
+
+\begin_layout Enumerate
+Things that might be useful, but really complicate the code: evb potentials,
+ some parts of adaptive QM/MM, nudged elastic band, constant pH and constant
+ redox potential simulations.
+\end_layout
+
+\begin_layout Enumerate
+Non-periodic 3D-RISM has been removed for now, in an attempt to get the
+ simplest possible RISM code, perhaps as a basis for future GPU work.
+\end_layout
+
+\end_deeper
+\begin_layout Enumerate
+Key pieces of code that are still there, and being emphasized:
+\end_layout
+
+\begin_deeper
+\begin_layout Enumerate
+* Periodic and non-periodic simulations, with all of Amber's GB models
+\end_layout
+
+\begin_layout Enumerate
+* 3D-RISM in periodic boundary conditions
+\end_layout
+
+\begin_layout Enumerate
+* QM/MM, including hooks to external codes
+\end_layout
+
+\begin_layout Enumerate
+* NMR, cryoEM and Xray restraints (including quite a bit of new code; Xray
+ restraints include NVIDIA GPU-enabled capabilities)
+\end_layout
+
+\begin_layout Enumerate
+* Thermodynamic integration and non-equilibrium sampling methods
+\end_layout
+
+\begin_layout Enumerate
+* Replica exchange capabilities, except for constant pH and redox potential
+ simulations
+\end_layout
+
+\end_deeper
+\begin_layout Section
 Installation
 \end_layout
 
@@ -621,6 +689,23 @@ make install
 
 \begin_layout LyX-Code
 make test             # optional--more info is below
+\end_layout
+
+\begin_layout Standard
+The test suite also serves as a source of example input files.
+ Look especially in the 
+\emph on
+rism
+\emph default
+, 
+\emph on
+xray
+\emph default
+ and 
+\emph on
+cryoem
+\emph default
+ folders to see sample inputs for these sorts of calculation.
 \end_layout
 
 \begin_layout Section
